Merge/quality select bug fixes